第三章笔记 至3.6 P57

--- a/Mynote/第三章 处理数据/处理数据.md
+++ b/Mynote/第三章 处理数据/处理数据.md
@@ -305,5 +305,40 @@ b - a = 0
 问题在于，2.34E+22是一个小数点左边有23位的数字。加上1，就是在第23位加1。但float类型**只能表示数字中的前6位或前7位**，因此修改第23位对这个值不会有任何影响。
 
 
+## C++算数运算符
+
+`+ - * / %` 
+
+### 类型转换
+
+#### 初始化和赋值进行转换
+
++ `so_long = thirty` 小范围类型得数可以赋值给大范围的变量，原变量不变，所存数据被扩展
++ 大范围得值传递给小范围的值，会出现问题
+
+#### 以`{}`方式初始化时进行的转换
+
++ 列表初始化不允许缩窄
++ 不允许使用变量，有超出范围得风险
+
+#### 表达式中的转换
+
++ 一些类型在出现时便会自动转换
++ 有些类型在与其他类型同时出现在表达式中时将被转换
+  + 计算时将做**数据类型的提升**
+  
+#### 强制类型转换
+
+#### C++11中的auto声明
+
+关键字，编译器根据初始值的类型推断变量的类型
+
+## 复习题
+
+![](2023-02-02-00-42-35.png)
+
+1. 
+
+
 
 
