--- a/Mynote/第三章 处理数据/处理数据.md
+++ b/Mynote/第三章 处理数据/处理数据.md
@@ -337,8 +337,268 @@ b - a = 0
 
 ![](2023-02-02-00-42-35.png)
 
-1. 
+1. int, short, long, long long
+2. ```cpp
+   short a =80;
+   unsigned int b = 42110;
+   ```
+3. 程序员自己预估
+4. 默认C++整数在不超出int类型的范围的应用情况下，默认优先使用int类型
+5. 基于ASCII的平台下，两者是等价的
+6. + ```cpp
+     char ch = 88;
+     cout << ch << endl;
+     ```
+   + `cout << (char) 88 << endl;`
+7. 放得下不会溢出
 
 
+## 编程练习
 
+1. 编写一个小程序，要求用户使用一个整数指出自己的身高（单位为英寸)，然后将身高转换为英尺和英寸。该程序使用下划线字符来指示输入位置。另外，使用一个const符号常量来表示转换因子。
+   
+运行代码：
+```cpp
+#include<iostream>
+using namespace std;
+
+const int FOOT_TO_INCH = 12;
+
+int main(void)
+{
+    int h;
+
+    cout << "Please enter your height int inches_";
+    cin >> h;
+    cout << "Your height convert to " << h / FOOT_TO_INCH;
+    cout << " FOOT and " << h % FOOT_TO_INCH << " INCHES height." << endl;
+
+
+    return 0;
+}
+```
+
+输出结果：
+```cpp
+Please enter your height int inches_85
+Your height convert to 7 FOOT and 1 INCHES height.
+```
+
+2. 编写一个小程序，要求以几英尺几英寸的方式输入其身高，并以磅为单位输入其体重。(使用3个变量来存储这些信息。）该程序报告其BMI (Body Mass Index，体重指数)。为了计算BMI，该程序以英寸的方式指出用户的身高(1英尺为12英寸)，并将以英寸为单位的身高转换为以米为单位的身高(1英寸=0.0254米)。然后，将以磅为单位的体重转换为以千克为单位的体重(1千克=2.2磅)。最后，计算相应的BMI——体重（千克）除以身高（米）的平方。用符号常量表示各种转换因子。
+
+运行代码：
+```cpp
+#include<iostream>
+using namespace std;
+const int FOOT_TO_INCH = 12;
+const double INCH_TO_METER = 0.0254;
+const double KILLGRAM_TO_POUND = 2.2;
+
+int main(void)
+{
+    int h_foot, h_inch;
+    double w_pound;
+
+    cout << "Please enter your height foot: ";
+    cin >> h_foot;
+    cout << "Please enter your height inches: ";
+    cin >> h_inch;
+    cout << "Please enter your weight in pounds: ";
+    cin >> w_pound;
+
+    double h = (h_foot * FOOT_TO_INCH + h_inch) * INCH_TO_METER;
+    double w = (w_pound / KILLGRAM_TO_POUND);
+
+    double bmi = w / (h * h);
+
+    cout << "Your BMI is " << bmi << endl;
+
+    return 0;
+}
+```
+
+输出结果：
+```cpp
+Please enter your height foot: 7
+Please enter your height inches: 1
+Please enter your weight in pounds: 325
+Your BMI is 31.6924
+```
+
+3. 编写一个程序，要求用户以度、分、秒的方式输入一个纬度，然后以度为单位显示该纬度。1度为60分，1分等于60秒，请以符号常量的方式表示这些值。对于每个输入值,应使用一个独立的变量存储它。下面是该程序运行时的情况:
+
+```cpp
+Enter a latitude in degrees,minutes,and seconds:
+First, enter the degrees: 37
+Next,enter the minutes of arc: 51
+Finally, enter the seconds of arc: 19
+37 degrees, 51 minutes, 19 seconds = 37.8553 degrees
+```
+
+运行代码：
+```cpp
+#include<iostream>
+using namespace std;
+
+int main(void)
+{
+    int deg, min, sec;
+
+    cout << "Enter a latitude in degrees,minutes, and seconds: " << endl;
+    cout << "First, enter the degree: ";
+    cin >> deg;
+    cout << "Next, enter the minutes of arc: ";
+    cin >> min;
+    cout << "Finally, enter the seconds of arc: ";
+    cin >> sec;
+
+    double wei = deg + min / 60.0 + sec / 60.0 / 60.0;
+
+    cout << deg << " degrees, " << min << " minutes, " << sec << " seconds = " << wei << " degrees" << endl;
+
+    return 0;
+}
+```
+
+输出结果：
+```cpp
+Enter a latitude in degrees,minutes, and seconds: 
+First, enter the degree: 37
+Next, enter the minutes of arc: 51
+Finally, enter the seconds of arc: 19
+37 degrees, 51 minutes, 19 seconds = 37.8553 degrees
+```
+
+4. 编写一个程序，要求用户以整数方式输入秒数（使用long或 long long变量存储)，然后以天、小时、分钟和秒的方式显示这段时间。使用符号常量来表示每天有多少小时、每小时有多少分钟以及每分钟有多少秒。该程序的输出应与下面类似:
+```cpp
+Enter the number of seconds: 31600000
+31600000 seconds = 365 days, 17 hours, 46 minutes, 40 seconds
+```
+
+运行代码：
+```cpp
+#include<iostream>
+using namespace std;
+
+int main(void)
+{
+    long sec;
+    int seconds, mintues, hours, days;
+
+    cout << "Enter the number of seconds: ";
+    cin >> sec;
+
+    seconds = sec % 60;
+    mintues = sec / 60;
+    
+    hours = mintues / 60;
+    mintues %= 60;
+
+    days = hours / 24;
+    hours %= 60;
+
+    cout << sec << " seconds = " << days << " days, " << hours << " hours, " << mintues << " minutues, " << seconds << " seconds" << endl;
+
+    return 0;
+}
+```
+
+输出结果：
+```cpp
+Enter the number of seconds: 31600000
+31600000 seconds = 365 days, 17 hours, 46 minutues, 40 seconds
+```
+
+5. 编写一个程序，要求用户输入全球当前的人口和美国当前的人口（或其他国家的人口)。将这些信息存储在long long变量中，并让程序显示美国（或其他国家）的人口占全球人口的百分比。该程序的输出应与下面类似:
+```cpp
+Enter the world's population: 6898758899
+Enter the population of the US: 310783781
+The population of the us is 4.50492% of the world population.
+```
+
+运行代码：
+```cpp
+#include<iostream>
+using namespace std;
+
+int main(void)
+{
+    long long wp, up;
+
+    cout << "Enter the world's population: ";
+    cin >> wp;
+    cout << "Enter the population of the US: ";
+    cin >> up;
+
+    double pre = (double)up / wp * 100;
+
+    cout << "THe population of the US is " << pre << "% "
+         << "of the world population." << endl;
+
+    return 0;
+}
+```
+
+输出结果：
+```cpp
+Enter the world's population: 6898758899
+Enter the population of the US: 310783781
+THe population of the US is 4.50492% of the world population.
+```
+
+6. 编写一个程序，要求用户输入驱车里程(英里）和使用汽油量（加仑)，然后指出汽车耗油量为一加仑的里程。如果愿意，也可以让程序要求用户以公里为单位输入距离，并以升为单位输入汽油量，然后指出欧洲风格的结果——即每100公里的耗油量(升)。
+
+```cpp
+#include<iostream>
+using namespace std;
+
+int main(void)
+{
+    double miles, gallon;
+
+    cout << "Enter the distance in miles: ";
+    cin >> miles;
+    cout << "Enter the fuel consume in gallon: ";
+    cin >> gallon;
+
+    double consume = miles / gallon;
+    cout << "The fuel consume is " << consume << " miles/gallon." << endl;
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+Enter the distance in miles: 100
+Enter the fuel consume in gallon: 10
+The fuel consume is 10 miles/gallon.
+```
+
+7. 编写一个程序，要求用户按欧洲风格输入汽车的耗油量(每100公里消耗的汽油量(升))，然后将其转换为美国风格的耗油量——每加仑多少英里。注意，除了使用不同的单位计量外，美国方法（距离/燃料）与欧洲方法（燃料/距离）相反。100公里等于62.14英里，1加仑等于3.875升。因此，19mpg 大约合12.41/100km，127mpg 大约合8.71/100km。
+
+运行代码：
+```cpp
+#include<iostream>
+using namespace std;
+
+int main(void)
+{
+    double ec, uc;
+
+    cout << "Enter the fuel consume in europe(L/100km): ";
+    cin >> ec;
+
+    uc = 3.875 / ec * 62.14;
+
+    cout << "The fuel consume in US is: " << uc << " mile/gallon." << endl;
+
+    return 0;
+}
+```
+
+输出结果：
+```cpp
+Enter the fuel consume in europe(L/100km): 8.5
+The fuel consume in US is: 28.3285 mile/gallon.
+```
 
