第三章笔记 更新目录

--- a/Mynote/第三章 处理数据/处理数据.md
+++ b/Mynote/第三章 处理数据/处理数据.md
@@ -1,4 +1,30 @@
+<!-- TOC -->
 
+- [处理数据](#处理数据)
+  - [简单变量](#简单变量)
+    - [变量名](#变量名)
+  - [整型](#整型)
+    - [无符号类型](#无符号类型)
+    - [整型字面值](#整型字面值)
+    - [C++如何确定常量的类型](#c如何确定常量的类型)
+    - [char类型：字符和小整数](#char类型字符和小整数)
+      - [通过`cout.put()`成员函数输出字符](#通过coutput成员函数输出字符)
+      - [转义字符](#转义字符)
+  - [`const`限定符](#const限定符)
+  - [浮点数](#浮点数)
+    - [书写浮点数](#书写浮点数)
+    - [浮点类型](#浮点类型)
+    - [浮点数的优缺点](#浮点数的优缺点)
+  - [C++算数运算符](#c算数运算符)
+    - [类型转换](#类型转换)
+      - [初始化和赋值进行转换](#初始化和赋值进行转换)
+      - [以`{}`方式初始化时进行的转换](#以方式初始化时进行的转换)
+      - [表达式中的转换](#表达式中的转换)
+      - [强制类型转换](#强制类型转换)
+      - [C++11中的auto声明](#c11中的auto声明)
+  - [复习题](#复习题)
+
+<!-- /TOC -->
 # 处理数据
 
 ## 简单变量
