--- a/Mynote/第四章 复合类型/复合类型.md
+++ b/Mynote/第四章 复合类型/复合类型.md
@@ -391,10 +391,106 @@ enum {zero, null=0, one, numero_one};//zero,null都为0，one,numero_one都为1
 
 ## 指针和自由存储空间
 
+取地址运算符`（&）`，`&home`, 取出变量`home`的地址 
 
+指针类型的意义：
 
+1. 决定了解引用的权限多大
+2. 决定了加减指针时的步进多大
 
+**指针的大小相同**，但是指针所**指向的内容**大小不一样大
 
+### 指针的危险
 
+1. 创建指针时，计算机将分配用来**存储指针的内存**，但不会分配用来**存储指针所指向的数据的内存**。
+2. 警告:一定要在对指针应用解除引用运算符(*)之前，将指针初始化为一个确定的、适当的地址。这是关于使用指针的金科玉律。
+
+### 指针和数字
+
+指针不是整型。不能简单的将整数赋值给指针：
+```cpp
+int *pt;
+pt = 0xB8000000;  //not allowed
+```
+
+### 使用`new`来分配内存
+
+`new`寻找可以存储int类型的内存块，并返回首地址
+
+```cpp
+int *pn = new int;
+```
+通用格式：
+
+```cpp
+typeName *pointer_name = new typeName;
+```
+
+```cpp
+#include<iostream>
+using namespace std;
+
+int main(void)
+{
+    int nights = 1001;
+    int *pt = new int;
+    *pt = 1001;
+
+    cout << "nights value = " << nights << ",location = " << &nights << endl;
+    cout << "int value = " << *pt << ", location = " << pt << endl;
+
+    double *pd = new double;
+    *pd = 27348.39;
+
+    cout << "double value = " << *pd << ", location = " << pd << endl;
+
+    cout << "*pd location = " << &pd << endl;//取出指针的地址
+
+    cout << "size of pt = " << sizeof(pt) << "; size of *pt = " << sizeof(*pt) << endl;
+    cout << "size of pd = " << sizeof(pd) << "; size of *pd = " << sizeof(*pd) << endl;
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+nights value = 1001,location = 0x61fe14    
+int value = 1001, location = 0x632530      
+double value = 27348.4, location = 0x632550
+*pd location = 0x61fe08
+size of pt = 8; size of *pt = 4
+size of pd = 8; size of *pd = 8
+```
+
+`int`类型、`double`类型的指针变量的大小是一样的,具体大小由计算机决定
+
+### 使用`delete`释放内存
+
+```cpp
+int *ps = new int;
+...
+delete ps;
+```
+这将**释放ps指向的内存**，但**不会删除指针ps本身**。例如，可以将ps重新指向另一个新分配的内存块。
+
+`new` , `delete` 成对出现 
+
+### 使用`new`来创建动态数组
+
+静态联编和动态联编
+
+#### 使用new创建动态数组
+
+要创建一个包含10个int元素的数组
+```cpp
+int *psome = new int[10];
+```
+`new`运算符返回首元素的地址
+
+当程序使用完`new`分配的内存块时，应使用`delete`释放他们。对于使用`new`创建的数组，应使用另一种格式的`delete`来释放:
+
+```cpp
+delete [] psome;
+```
 
 
