第四章笔记 至P94

--- a/Mynote/第四章 复合类型/复合类型.md
+++ b/Mynote/第四章 复合类型/复合类型.md
@@ -493,4 +493,167 @@ int *psome = new int[10];
 delete [] psome;
 ```
 
+使用`new`,`delete`，应遵循以下规则：
++ 不要使用`delete`来释放不是`new`分配的内存
++ 不要使用`delete`释放同一个内存块两次
++ 如果使用`new[]`为数组分配内存，则应使用`delete[]`来释放
++ 如果使用`new`为一个实体分配内存，则应使用`delete`（没有方括号）来释放
++ 对空指针应用`delete`是安全的
+
+#### 使用动态数组
+
+```cpp
+#include<iostream>
+using namespace std;
+
+int main(void)
+{
+    double *p3 = new double[3];
+    p3[0] = 0.2;
+    p3[1] = 0.5;
+    p3[2] = 0.8;
+
+    cout << "p3[1] is " << p3[1] << endl;
+    cout << "(p3 + 1) is: " << *(p3 + 1) << endl;
+
+    delete[] p3;//与new配套，释放内存
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+p3[1] is 0.5    
+(p3 + 1) is: 0.5
+```
+
+## 指针、数组和指针算术
+
+指针和数组基本等价的原因在于指针运算和C++内部处理数组的方式。
+
+将整数加1后，其值将加1；指针变量加1，将跳跃到下一个元素
+
+```cpp
+#include<iostream>
+using namespace std;
+
+int main(void)
+{
+    double wages[3] = {100.0, 200.0, 299.9};
+    short stacks[3] = {3, 2, 1};
+
+    double *pw = wages;      //数组名表示数组首元素地址
+    short *ps = &stacks[0];
+
+    cout << "pw = " << pw << ", *pw = " << *pw << endl;
+    pw += 1;
+    cout << "add 1 to the pw pointer:" << endl;
+    cout << "pw = " << pw << ", pw = " << *pw << endl;
+
+    cout << endl;
+
+    cout << "ps = " << ps << ", *ps = " << *ps << endl;
+    ps += 1;
+    cout << "add 1 to the ps pointer:" << endl;
+    cout << "ps = " << ps << ", ps = " << *ps << endl;
+
+    cout << endl;
+
+    cout << "stacks[0] = " << stacks[0] << ", stacks[1] = " << stacks[1] << endl;
+    cout << "*stacks = " << *stacks << ", *(stacks+1) = " << *(stacks + 1) << endl;
+
+    cout << "size of wages array = " << sizeof(wages) << endl;
+    cout << "size of pw pointer = " << sizeof(pw) << endl;
+
+    return 0;
+}
+```
+
+输出结果：
+```cpp
+pw = 0x61fdf0, *pw = 100
+add 1 to the pw pointer:
+pw = 0x61fdf8, pw = 200 
+
+ps = 0x61fdea, *ps = 3      
+add 1 to the ps pointer:    
+ps = 0x61fdec, ps = 2       
+
+stacks[0] = 3, stacks[1] = 2
+*stacks = 3, *(stacks+1) = 2
+size of wages array = 24
+size of pw pointer = 8
+```
+
+可以修改指针的值，而数组名是常量。
+
+数组名被解释为第一个元素的地址，而对**数组名应用地址运算符**时，得到的是整个数组的地址：
+```cpp
+short tell[10];
+cout << tell << endl;
+cout << &tell << endl;
+```
+
+### 指针和字符串
+
+`cout`识别一个字符的地址，则将从该字符开始打印，直到遇到空字符为止。
+
+字符串数组名，及`“”`引用的字符串都表示首地址。
+
+```cpp
+char name[20] = "ross";
+cout << name << "is red.";
+```
+
+```cpp
+#include<iostream>
+#include<cstring>
+using namespace std;
+
+int main(void)
+{
+    char animal[20] = "bear";
+    const char *bird = "wren";
+    char *ps;
+
+    cout << animal << " and " << bird << endl;
+
+    cout << "Enter a kind of animal: ";
+    cin >> animal;
+    cout << animal << endl;
+
+    ps = animal;
+    cout << ps << endl;
+
+    cout << animal << " at " << (int *)animal << endl;
+    cout << ps << " at " << (int *)ps << endl;
+
+    cout << "After using strcpy.\n";
+    ps = new char[strlen(animal) + 1];
+    strcpy(ps, animal);
+    cout << animal << " at " << (int *)animal << endl;
+    cout << ps << " at " << (int *)ps << endl;
+    delete[] ps;
+
+    return 0;
+}
+```
+
+输出结果：
+```cpp
+bear and wren
+Enter a kind of animal: fox
+fox
+fox
+fox at 0x61fdf0    
+fox at 0x61fdf0    
+After using strcpy.
+fox at 0x61fdf0    
+fox at 0x25b2540
+```
+
+
+
+
+
 
