第四章笔记 完结

--- a/Mynote/第四章 复合类型/复合类型.md
+++ b/Mynote/第四章 复合类型/复合类型.md
@@ -1,4 +1,43 @@
+<!-- TOC -->
 
+- [复合类型](#复合类型)
+  - [数组](#数组)
+    - [数组初始化规则](#数组初始化规则)
+    - [`C++11` 数组初始化方法](#c11-数组初始化方法)
+  - [字符串（C-style string）](#字符串c-style-string)
+    - [每次读取整行的字符串输入](#每次读取整行的字符串输入)
+      - [`getlin()`](#getlin)
+      - [`get()`](#get)
+    - [混合输入字符串和数字](#混合输入字符串和数字)
+  - [`string`类 (C++ style string)](#string类-c-style-string)
+    - [赋值、拼接和附加](#赋值拼接和附加)
+    - [使用c语言库的字符串处理函数](#使用c语言库的字符串处理函数)
+  - [结构简介](#结构简介)
+    - [其他结构属性](#其他结构属性)
+    - [结构数组](#结构数组)
+  - [共用体`union`](#共用体union)
+  - [枚举`enum`](#枚举enum)
+    - [设置枚举量的值](#设置枚举量的值)
+    - [枚举的取值范围](#枚举的取值范围)
+  - [指针和自由存储空间](#指针和自由存储空间)
+    - [指针的危险](#指针的危险)
+    - [指针和数字](#指针和数字)
+    - [使用`new`来分配内存](#使用new来分配内存)
+    - [使用`delete`释放内存](#使用delete释放内存)
+    - [使用`new`来创建动态数组](#使用new来创建动态数组)
+      - [使用new创建动态数组](#使用new创建动态数组)
+      - [使用动态数组](#使用动态数组)
+  - [指针、数组和指针算术](#指针数组和指针算术)
+    - [指针和字符串](#指针和字符串)
+    - [使用new创建动态结构](#使用new创建动态结构)
+  - [类型组合综合运用](#类型组合综合运用)
+  - [数组的替代品](#数组的替代品)
+    - [模板类vector](#模板类vector)
+    - [模板类array(C++11)](#模板类arrayc11)
+  - [复习题](#复习题)
+  - [编程练习](#编程练习)
+
+<!-- /TOC -->
 # 复合类型
 
 ## 数组
@@ -652,8 +691,709 @@ fox at 0x61fdf0
 fox at 0x25b2540
 ```
 
+### 使用new创建动态结构
 
+```cpp
+inflatable *ps = new inflatable;
+```
 
+使用指向结构体的指针：
+```cpp
+#include<iostream>
+using namespace std;
 
+struct inflatable
+{
+    char name[20];
+    float volume;
+    double price;
+};
 
+int main(void)
+{
+    inflatable *ps = new inflatable;
+    cout << "Enter name of inflatable item: ";
+    cin.get(ps->name, 20);//结构体指针访问成员，使用->
+    cout << "Enter volume in cubic feet: ";
+    cin >> ps->volume;
+    cout << "Enter price $";
+    cin >> ps->price;
+
+    cout << "Nanme: " << ps->name << endl;
+    cout << "Volume: " << ps->volume << endl;
+    cout << "Price: $" << ps->price << endl;
+    delete ps;
+
+    return 0;
+}
+```
+
+输出结果：
+```cpp
+Enter name of inflatable item: Eabulous Frodo
+Enter volume in cubic feet: 1.4
+Enter price $27.99
+Nanme: Eabulous Frodo
+Volume: 1.4
+Price: $27.99 
+```
+
+定义函数`getname()`,示例使用`new`,`delete`
+
+```cpp
+#include<iostream>
+#include<cstring>
+using namespace std;
+char *getname();
+
+int main(void)
+{
+    char *name;
+    name = getname();
+    cout << name << " at " << (int *)name << endl;
+    delete[] name;
+
+    return 0;
+}
+
+char *getname()
+{
+    char arr[80];
+    cout << "Enter last name: ";
+    cin >> arr;
+    char *pn = new char[strlen(arr) + 1];
+    strcpy(pn, arr);
+
+    return pn;
+}
+```
+
+## 类型组合综合运用
+
+```cpp
+#include<iostream>
+using namespace std;
+
+struct aye
+{
+    int year;
+};
+
+int main(void)
+{
+    aye s1, s2, s3;
+
+    s1.year = 1998;
+
+    aye *pa = &s2;
+    pa->year = 1999;
+
+    aye trio[3];
+    trio[0].year = 2003;
+
+    cout << trio->year << endl;
+
+    const aye *arp[3] = {&s1, &s2, &s3};
+    cout << arp[1]->year << endl;
+
+    const aye **ppa = arp;
+    cout << (*ppa)->year << endl;  //*ppa = arp[0]
+
+    auto ppb = arp;
+    cout << (*(ppb + 1))->year << endl;
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+2003
+1999
+1998
+1999
+```
+
+## 数组的替代品
+
+### 模板类vector
+
+是一种动态数组
+
+要使用vector，必须包含头文件vector,使用命名空间std；模板使用不同的语法来指出它存储的数据类型；vector类使用不同的语法来指定元素数。
+
+一般而言，下面声明创建一个名为vt的vector对象，它可以存储n_elem个类型为typeName的元素：
+
+```cpp
+vector<typename> vt(n_elem);
+```
+
+其中参数`b_elem`可以是整型常量，也可以是整型变量。
+
+### 模板类array(C++11)
+
+包含头文件，使用命名空间std；
+
+下面声明创建一个名为`arr`的`array`对象，它包含n_elem个类型为typename的元素：
+```cpp
+array<typename, n_elem> arr;
+```
+
+与`vector`不同的是，`n_elem`是常量
+
+```cpp
+#include<iostream>
+#include<vector>
+#include<array>
+using namespace std;
+
+int main(void)
+{
+    double a1[4] = {1.2, 2.3, 3.6, 4.8};
+
+    vector<double> a2(4); //地址在内存的堆中，其他的在内存的栈中
+    a2[0] = 1.0 / 3.0;
+    a2[1] = 1.0 / 5.0;
+    a2[2] = 1.0 / 7.0;
+    a2[3] = 1.0 / 9.0;
+
+    array<double, 4> a3 = {3.14, 2.72, 1.62, 1.41};
+    array<double, 4> a4;
+
+    //a3数据传递给a4,可以直接赋值运算符传递
+    a4 = a3;
+
+    cout << "a1[2]: " << a1[2] << " at " << &a1[2] << endl;
+    cout << "a2[2]: " << a2[2] << " at " << &a2[2] << endl;
+    cout << "a3[2]: " << a3[2] << " at " << &a3[2] << endl;
+    cout << "a4[2]: " << a4[2] << " at " << &a4[2] << endl;
+
+    return 0;
+}
+```
+
+输出结果：
+```cpp
+a1[2]: 3.6 at 0x62fdf0     
+a2[2]: 0.142857 at 0xd52550
+a3[2]: 1.62 at 0x62fdb0    
+a4[2]: 1.62 at 0x62fd90 
+```
+
+## 复习题
+![](2023-02-06-15-47-52.png)
+
+1. 声明数据
+   1. char actor[30];
+   2. short betsie[100];
+   3. float chuck[13];
+   4. long double dipsea[64];
+2. 使用模板类array
+   ```cpp
+   #include<array>
+   array<char, 30> actor;
+   array<short, 100> betsie;
+   array<float, 13> chuck;
+   array<long double, 64> dipsea;
+   ```
+3. int arr[5]={1,3,5,7,9}；
+4. ```cpp
+   int arr[5]={1,3,5,7,9};
+   int even = arr[0] + arr[4]; 
+   ```
+5. ```cpp
+   float ideas[10];
+   cout << ideas[1] << endl;
+   ```
+6. `char arr[] = "cheeseburge";`
+7. `string arr = "Waldorf Salad";`
+8. ```cpp
+   struct fish
+   {
+       char kind[20];
+       int weight;
+       float length;
+   };
+   ```
+9. ```cpp
+   struct fish
+   {
+       char kind[20];
+       int weight;
+       float length;
+   };
+   fish ff = 
+   {  
+       "Bigfish",
+       12,
+       4.2 
+   };
+   ```
+10. `enum Rseponse = {No, Yes, Maybe};`
+11. ```cpp
+    double ted = 1.8;
+    double *pd = &ted;
+    cout << "ted = " << *pd <<endl;
+    ```
+12. ```cpp
+    float treacle[10] = {0};
+    float *pt = tracle;
+    cout << "treacle[0] = " << *pt << ", treacle[9] = " << *(pt+9)<<endl;
+    ```
+13. 创建代码
+```cpp
+#include<iostream>
+using namespace std;
+
+int main(void)
+{
+    cout << "Enter a number: ";
+    cin >> size;
+    int *pt = new int[size]; 
+    return 0;
+}
+
+#include<vector>
+int main(void)
+{
+    cout << "Enter a number: ";
+    cin >> size;
+    vector<int> vn(size);
+
+    return 0;
+}
+```
+14. 有效，强制类型转换后，打印的是字符串的首地址
+15. 
+```cpp
+#include<iostream>
+using namespace std;
+struct fish
+{
+    char kind[20];
+    int weight;
+    float length;
+};
+
+int main(void)
+{
+    fish *pf = new fish;
+    pt->kind = "djajk";
+    pt->weight = 8;
+    pt->length = 10.8;
+    cout << pt->kind << ", " <<pt->weight << ", " << pt->length << endl;
+
+    return 0;
+}
+```
+16. `address`中的空格键将成为`cin`的中断，剩下的字符串将暂存在缓冲区当中，影响下一次的`cin`。
+17.
+ ```cpp
+#include<iostream>
+#include<string>
+#include<vector>
+#include<array>
+const int SIZE = 10;
+
+int main(void)
+{
+    std::vector<std::string> arr(SIZE);
+    std::array<std::string, SIZE> ary; 
+
+    return 0;
+}
+```
+
+## 编程练习
+
+1. 编写一个C++程序，如下述输出示例所示的那样请求并显示信息:
+```cpp
+what is your first name? Betty sue
+what is your last name? Yewe
+what letter grade do you deserve? B
+what is your age? 22
+Name: Yewe，Betty sue
+Grade: c
+Age: 22
+```
+
+运行代码：
+```cpp
+#include<iostream>
+#include<string>
+using namespace std;
+struct message
+{
+    string first_name;
+    string last_name;
+    char l_grade;
+    int age;
+};
+
+int main(void)
+{
+    message GJT;
+
+    cout << "What is your first name? ";
+    getline(cin, GJT.first_name);
+    cout << "What is your last name? ";
+    cin >> GJT.last_name;
+    cout << "What latter grade do you deserve? ";
+    cin >> GJT.l_grade;
+    cout << "What is your age? ";
+    cin >> GJT.age;
+
+    cout << "Name: " << GJT.last_name << ", " << GJT.first_name << endl;
+    cout << "Grade: " << char(GJT.l_grade + 1) << endl;
+    cout << "Age: " << GJT.age << endl;
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+What is your first name? Betty sue
+What is your last name? Yewe
+What latter grade do you deserve? B
+What is your age? 22
+Name: Yewe, Betty sue
+Grade: C
+Age: 22
+```
+
+2. 修改程序清单4.4，使用C++ string类而不是char数组。
+```cpp
+#include<iostream>
+#include<string>
+using namespace std;
+
+int main(void)
+{
+    string name;
+    string dessert;
+
+    cout << "Enter your name: " << endl;
+    getline(cin, name);
+    cout << "Enter your favorite dessert: " << endl;
+    getline(cin, dessert);
+
+    cout << "I have some delicious " << dessert << " for you, " << name << "." << endl;
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+Enter your name: 
+GJT 
+Enter your favorite dessert: 
+cake
+I have some delicious cake for you, GJT.
+```
+
+3. 编写一个程序，它要求用户首先输入其名，然后输入其姓;然后程序使用一个逗号和空格将姓和名组合起来，并存储和显示组合结果。请使用char数组和头文件cstring 中的函数。下面是该程序运行时的情形:
+```cpp
+Enter your first name: Flip
+Enter your last name: Fleming
+Here's the information in a single string: Fleming,Flip
+```
+
+运行代码：
+```cpp
+#include<iostream>
+#include<cstring>
+using namespace std;
+const int SIZE = 20;
+
+int main(void)
+{
+    char first_name[SIZE];
+    char last_name[SIZE];
+    char full_name[2 * SIZE];
+
+    cout << "Enter your first name: ";
+    cin.getline(first_name, SIZE);
+    cout << "Enter your last name: ";
+    cin.getline(last_name, SIZE);
+    strcpy(full_name, last_name);
+    strcat(full_name, ", ");
+    strcat(full_name, first_name);
+
+    cout << "Here's the information in a single string: " << full_name << endl;
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+Enter your first name: Flip
+Enter your last name: Fleming
+Here's the information in a single string: Fleming, Flip
+```
+
+4. 编写一个程序，它要求用户首先输入其名，再输入其姓;然后程序使用一个逗号和空格将姓和名组合起来，并存储和显示组合结果。请使用string对象和头文件 string 中的函数。下面是该程序运行时的情形:
+```cpp
+Enter your first name: Flip
+Enter your last name: Fleming
+Here's the information in a single string: Fleming,Flip
+```
+
+运行代码：
+```cpp
+#include<iostream>
+#include<string>
+using namespace std;
+
+int main(void)
+{
+    string first_name;
+    string last_name;
+    string full_name;
+
+    cout << "Enter your first name: ";
+    getline(cin, first_name);
+    cout << "Enter your last name: ";
+    getline(cin, last_name);
+    full_name = last_name + ", " + first_name;
+
+    cout << "Here's the information in a single string: " << full_name << endl;
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+Enter your first name: Flip
+Enter your last name: Fleming
+Here's the information in a single string: Fleming, Flip
+```
+
+5. 结构CandyBar包含3个成员。第一个成员存储了糖块的品牌;第二个成员存储糖块的重量（可以有小数);第三个成员存储了糖块的卡路里含量（整数)。请编写一个程序，声明这个结构，创建一个名为snack的 CandyBar变量，并将其成员分别初始化为“Mocha Munch”、2.3和350。初始化应在声明snack时进行。最后，程序显示snack变量的内容。
+
+运行代码：
+```cpp
+#include<iostream>
+#include<string>
+using namespace std;
+struct CandyBar
+{
+    string brand;
+    double weight;
+    int calorie;
+} snack =
+    {
+        "Mocha Munch",2.3,350
+    };
+int main(void)
+{
+    cout << "This snack is: " << snack.brand << ", " << snack.weight << ", " << snack.calorie << endl;
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+This snack is: Mocha Munch, 2.3, 350
+```
+
+6. 结构 CandyBar包含3个成员，如编程练习5所示。请编写一个程序，创建一个包含3个元素的CandyBar数组，并将它们初始化为所选择的值，然后显示每个结构的内容。
+
+运行代码：
+```cpp
+#include<iostream>
+#include<string>
+using namespace std;
+struct CandyBar
+{
+    string brand;
+    double weight;
+    int calorie;
+};
+
+int main(void)
+{
+    CandyBar snack[3];
+
+    cout << "Enter the brand of the snack: ";
+    getline(cin, snack[0].brand);
+    cout << "Enter the weight of the snack: ";
+    cin >> snack[0].weight;
+    cout << "Enter the calorie of the snack: ";
+    cin >> snack[0].calorie;
+
+    cout << "This snack is: " << snack[0].brand << ", " << snack[0].weight << ", " << snack[0].calorie << endl;
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+Enter the brand of the snack: Mocha Munch
+Enter the weight of the snack: 2.3 
+Enter the calorie of the snack: 250
+This snack is: Mocha Munch, 2.3, 250
+```
+
+7. William Wingate从事比萨饼分析服务。对于每个披萨饼，他都需要记录下列信息:
+   + 披萨饼公司的名称，可以有多个单词组成。
+   + 披萨饼的直径。
+   + 披萨饼的重量。
+
+运行代码：
+```cpp
+#include<iostream>
+#include<string>
+using namespace std;
+struct William
+{
+    string name;
+    double diameter;
+    double weight;
+};
+
+int main(void)
+{
+    William pizza[3];
+    
+    cout << "Enter the name of the pizza company: ";
+    getline(cin, pizza[0].name);
+    cout << "Enter the diameter of the pizza in inches: ";
+    cin >> pizza[0].diameter;
+    cout << "Enter the weight of the pizza in pounds: ";
+    cin >> pizza[0].weight;
+
+    cout << "Pizza company is: " << pizza[0].name << ", diameter in inches: " << pizza[0].diameter << ", weight in pounds: " << pizza[0].weight << "." << endl;
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+Enter the name of the pizza company: KFC
+Enter the diameter of the pizza in inches: 12.5
+Enter the weight of the pizza in pounds: 5.5
+Pizza company is: KFC, diameter in inches: 12.5, weight in pounds: 5.5.
+```
+
+8. 完成编程练习7，但使用new来为结构分配内存，而不是声明一个结构变量。另外，让程序在请求输入比萨饼公司名称之前输入比萨饼的直径。
+
+运行代码：
+```cpp
+#include<iostream>
+#include<string>
+using namespace std;
+struct William
+{
+    string name;
+    double diameter;
+    double weight;
+};
+
+int main(void)
+{
+    William *pw = new William;
+
+    cout << "Enter the diameter of the pizza: ";
+    cin >> pw->diameter;
+    cin.get();
+    cout << "Enter the name of the pizza company: ";
+    getline(cin, pw->name);
+    cout << "Enter the weight of the pizza: ";
+    cin >> pw->weight;
+
+    cout << "Pizza company is: " << pw->name << ", diameter in inches: " << pw->diameter << ", weight in pounds: " << pw->weight << "." << endl;
+
+    delete pw;
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+Enter the diameter of the pizza: 12.5
+Enter the name of the pizza company: KFC
+Enter the weight of the pizza: 5.5
+Pizza company is: KFC, diameter in inches: 12.5, weight in pounds: 5.5.
+```
+
+9. 完成编程练习6，但使用new来动态分配数组，而不是声明一个包含3个元素的CandyBar数组。
+
+运行代码：
+```cpp
+#include<iostream>
+#include<string>
+using namespace std;
+const int SIZE = 3;
+
+struct CandyBar
+{
+    string brand;
+    double weight;
+    int calorie;
+};
+
+int main(void)
+{
+    CandyBar *pc = new CandyBar[SIZE];
+
+    cout << "Enter the snack's name: ";
+    getline(cin, pc->brand);
+    cout << "Enter the snack's weight: ";
+    cin >> pc->weight;
+    cout << "Enter the snack's calorie: ";
+    cin >> pc->calorie;
+
+    cout << "This snack is: " << pc->brand << ", " << pc->weight << ", " << pc->calorie << endl;
+
+    delete[] pc; //不要忘记释放内存
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+Enter the snack's name: Mocha Munch
+Enter the snack's weight: 2.3
+Enter the snack's calorie: 350
+This snack is: Mocha Munch, 2.3, 350
+```
+
+10. 编写一个程序，让用户输入三次40码跑的成绩（如果您愿意，也可让用户输入40米跑的成绩)，并显示次数和平均成绩。请使用一个array对象来存储数据（如果编译器不支持array类,请使用数组)。
+
+运行代码：
+```cpp
+#include<iostream>
+#include<array>
+using namespace std;
+
+int main(void)
+{
+    array<double, 3> grade;
+
+    cout << "Enter three records of 40 meters: " << endl;
+    cout << "Enter your first record of 40m: ";
+    cin >> grade[0];
+    cout << "Enter your second record of 40m: ";
+    cin >> grade[1];
+    cout << "Enter your third record of 40m: ";
+    cin >> grade[2];
+
+    double average = (grade[0] + grade[1] + grade[2]) / 3.0;
+
+    cout << endl
+         << "1st: " << grade[0] << "; 2nd: " << grade[1] << "; 3rd: " << grade[2] << endl;
+    cout << "You ran 3 times, and you average record is: " << average << endl;
+
+    return 0;
+}
+```
+输出结果：
+```cpp
+Enter three records of 40 meters: 
+Enter your first record of 40m: 6.2
+Enter your second record of 40m: 5.9
+Enter your third record of 40m: 6.1
+
+1st: 6.2; 2nd: 5.9; 3rd: 6.1
+You ran 3 times, and you average record is: 6.06667
+```
 
