第六章笔记 至练习题未编

--- a/Mynote/第六章 分支语句和逻辑运算符/分支语句和逻辑运算符.md
+++ b/Mynote/第六章 分支语句和逻辑运算符/分支语句和逻辑运算符.md
@@ -425,11 +425,12 @@ Average weight of 5 fish: 4.6
 
 改进 6.5，在输入错误的时候
 
-1. 重置cin已接受新的输入
+1. 重置 cin 已接受新的输入
 2. 删除错误输入
 3. 提示用户在输入
 
-例6.6cpp
+例 6.6cpp
+
 ```cpp
 #include<iostream>
 using namespace std;
@@ -440,7 +441,7 @@ int main(void)
     int golf[MAX];
     cout << "Please enter your golf scores.\n";
     cout << "You must enter " << MAX << " rounds.\n";
-    
+
     int i;
     for (i = 0; i < MAX; i++)
     {
@@ -466,20 +467,21 @@ int main(void)
 ```
 
 输出结果：
+
 ```cpp
 Please enter your golf scores.
-You must enter 5 rounds.      
+You must enter 5 rounds.
 Round#: 1:
 88
-Round#: 2: 
+Round#: 2:
 99
-Round#: 3: 
+Round#: 3:
 xx
 Please enter a number: sf
 Please enter a number: 89
-Round#: 4: 
+Round#: 4:
 100
-Round#: 5: 
+Round#: 5:
 95
 Average score: 94.2.
 ```
@@ -488,9 +490,10 @@ Average score: 94.2.
 
 ### 写入文本文件中
 
-+ 必须包含头文件`fstream`
+- 必须包含头文件`fstream`
 
-例6.7.cpp
+例 6.7.cpp
+
 ```cpp
 #include<iostream>  //ostream -> cout   istream -> cin
 #include<fstream>   // 1. #include<fstream>   ofstream         ifstream
@@ -537,7 +540,9 @@ int main(void)
     return 0;
 }
 ```
+
 输出结果：
+
 ```cpp
 Enter the make and model of automoblie: Flitz Perky
 Enter the model year: 2009
@@ -545,15 +550,16 @@ Enter the orignal asking price: 13500
 
 Make and mobel: Flitz Perky
 Year: 2009
-Was asking: 13500.00       
+Was asking: 13500.00
 Now aksing: 12325.50
 ```
 
 ## 读取文本文件
 
-+ 必须包含头文件`fstream` 使用`ifstream`类
+- 必须包含头文件`fstream` 使用`ifstream`类
 
-例6.8.txt
+例 6.8.txt
+
 ```cpp
 #include<iostream>
 #include<fstream>                 //1. 包含fstream头文件
@@ -622,18 +628,238 @@ int main(void)
     return 0;
 }
 ```
+
 输出结果：
+
 ```cpp
 Enter name of the data file: 6_8.txt
 Sucees open txt file.
-End of file reached. 
-Items read: 11       
+End of file reached.
+Items read: 11
 Sum: 187
 Average: 17
 ```
 
-
 ## 复习题
 
+![](2023-02-13-22-56-11.png)
+![](2023-02-13-22-56-48.png)
 
+1. 第二种效率更高
+2. ch+1 :类型提升，输出整型数；++ch :ASCII 值增加，输出下一个字符
+3. ```cpp
+   H$i$!$
+   $S$e$n$d$ $ct1 = 9, ct2 = 9
 
+   ```
+
+4. - `weight >= 115 && weight < 125;`
+   - `ch = 'q' || ch == 'Q';`
+   - `(x % 2 == 0) && (x != 26);`
+   - `(x % 2 == 0) && (x % 26 != 0);`
+   - `(donation >= 1000 && donation <= 2000) || (1 == guest);`
+   - `(ch >= 'a' && ch <= 'z') || (ch >= 'A' && ch <= 'Z');`
+5. x 为 bool 类型的时候，相等；x 为其它类型的时候，不相等
+6. `(x >= 0) ? x : -x;`
+7. ```cpp
+   switch(ch)
+   {
+       case 'A': a_grade++; break;
+       case 'B': b_grade++; break;
+       case 'C': c_grade++; break;
+       case 'D': d_grade++; break;
+       default: f_grade++;
+   }
+   ```
+8. 当输入不是数字而是字符的时候，会出错；要是直接使用 char 类型的时候，输入字母不会有错误
+9. ```cpp
+   int line = 0;
+   char ch;
+   while(cin.get(ch) && ch != 'Q')
+   {
+       if (ch == '\n')
+           line++;
+   }
+   ```
+
+## 编程练习
+
+1. 编写一个程序，读取键盘输入，直到遇到@符号为止，并回显输入(数字除外)，同时将大写字符转换为小写，将小写字符转换为大写(别忘了cctype 函数系列)。
+
+运行代码：
+```cpp
+
+```
+输出结果：
+```cpp
+
+```
+
+2. 编写一个程序，最多将10个donation值读入到一个double数组中（如果您愿意，也可使用模板类array)。程序遇到非数字输入时将结束输入，并报告这些数字的平均值以及数组中有多少个数字大于平均值。
+
+运行代码：
+```cpp
+
+```
+输出结果：
+```cpp
+
+```
+
+3. 编写一个菜单驱动程序的雏形。该程序显示一个提供4个选项的菜单---每个选项用一个字母标记。如果用户使用有效选项之外的字母进行响应，程序将提示用户输入一个有效的字母，直到用户这样做为止。然后，该程序使用一条switch语句，根据用户的选择执行一个简单操作。该程序的运行情况如下:
+```cpp
+Please enter one of the following choices:
+c) carnivore         p) pianist
+t) tree              g) game
+f
+Please enter a c, p, t, or g: q
+Please enter a c, p, t, or g: t
+A maple is a tree.
+```
+
+运行代码：
+```cpp
+
+```
+输出结果：
+```cpp
+
+```
+
+4. 加入 Benevolent Order of Programmer后，在BOP大会上，人们便可以通过加入者的真实姓名、头衔或秘密BOP姓名来了解他（她)。请编写一个程序，可以使用真实姓名、头衔、秘密姓名或成员偏好来列出成员。编写该程序时，请使用下面的结构:
+```cpp
+// Benevolent order of Programmers name structure
+struct bop {
+char fullname[strsize];      //real name
+char title[strsize];         //job title
+char bopname [strsize];      //secret BOP name
+int preference;              // 0 = fullname，1 = title,2 = bopname
+};
+```
+该程序创建一个由上述结构组成的小型数组，并将其初始化为适当的值。另外，该程序使用一个循环，让用户在下面的选项中进行选择:
+```cpp
+a. display by name      b. display by title
+c. display by bopname   d. display by preference 
+q. quit
+```
+注意，“display by preference”并不意味着显示成员的偏好，而是意味着根据成员的偏好来列出成员。例如，如果偏好号为1，则选择d将显示程序员的头衔。该程序的运行情况如下:
+```cpp
+Benevolent order of Programmers Report
+a. display by name      b. display by title
+c. display by bopname   d. display by preference
+q. quit
+Enter your choice: a
+wimp Macho
+Raki Rhodes
+celia Laiter
+Hoppy Hipman
+Pat Hand
+Next choice: d
+wimp Macho
+Junior Programmer
+MIPS
+Analyst Trainee
+LOOPY
+Next choice: q
+Bye!
+```
+
+运行代码：
+```cpp
+
+```
+输出结果：
+```cpp
+
+```
+
+5. 在 Neutronia王国，货币单位是tvarp，收入所得税的计算方式如下:
+$$
+5000 tvarps:不收税
+$$
+
+$$
+5001～15000 tvarps:10%
+$$
+
+$$
+15001~35000 tvarps:15%
+$$
+
+$$
+35000 tvarps 以上:20%
+$$
+
+例如，收入为38000 tvarps时，所得税为5000 ×0.00 + 10000 ×0.10+20000 ×0.15 + 3000 × 0.20，即4600 tvarps。请编写一个程序，使用循环来要求用户输入收入，并报告所得税。当用户输入负数或非数字时，循环将结束。
+
+运行代码：
+```cpp
+
+```
+输出结果：
+```cpp
+
+```
+
+6. 编写一个程序，记录捐助给“维护合法权利团体”的资金。该程序要求用户输入捐献者数目，然后要求用户输入每一个捐献者的姓名和款项。这些信息被储存在一个动态分配的结构数组中。每个结构有两个成员:用来储存姓名的字符数组（或string对象）和用来存储款项的double成员。读取所有的数据后，程序将显示所有捐款超过10000的捐款者的姓名及其捐款数额。该列表前应包含一个标题，指出下面的捐款者是重要捐款人（Grand Patrons)。然后，程序将列出其他的捐款者，该列表要以Patrons开头。如果某种类别没有捐款者，则程序将打印单词“none”。该程序只显示这两种类别，而不进行排序。
+
+运行代码：
+```cpp
+
+```
+输出结果：
+```cpp
+
+```
+
+7. 编写一个程序，它每次读取一个单词，直到用户只输入q。然后，该程序指出有多少个单词以元音打头，有多少个单词以辅音打头，还有多少个单词不属于这两类。为此，方法之一是，使用isalpha()来区分以字母和其他字符打头的单词，然后对于通过了isalpha()测试的单词，使用if或switch语句来确定哪些以元音打头。该程序的运行情况如下:
+```cpp
+Enter words (q to quit) :
+The 12 awesome oxen ambled
+quietly across 15 meters of lawn. q
+5 words beginning with vowels
+4 words beginning with consonants
+2 others
+```
+
+运行代码：
+```cpp
+
+```
+输出结果：
+```cpp
+
+```
+
+8. 编写一个程序，它打开一个文件文件，逐个字符地读取该文件，直到到达文件末尾，然后指出该文件中包含多少个字符。
+
+运行代码：
+```cpp
+
+```
+输出结果：
+```cpp
+
+```
+
+9. 完成编程练习6，但从文件中读取所需的信息。该文件的第一项应为捐款人数，余下的内容应为成对的行。在每一对中，第一行为捐款人姓名，第二行为捐款数额。即该文件类似于下面:
+```cpp
+4
+sam stone
+2000
+Freida Flass
+100500
+Tammy Tubbs
+5000
+Rich Raptor
+55000
+```
+
+运行代码：
+```cpp
+
+```
+输出结果：
+```cpp
+
+```
